--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "axios": "^1.6.8",
     "firebase": "^10.9.0",
+    "framer-motion": "^11.0.20",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
